--- a/index.html
+++ b/index.html
@@ -6,7 +6,48 @@
     <title>Achitects-G3</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    
+<body class="work-sans-fonts">
+    <!-- Header Area -->
+     <header id="header">
+        <nav class="nav-container container display-flex">
+            <div class="brand">
+                <h2>G3 Architects</h2>
+            </div> 
+            <ul class="nav-links display-flex">
+                <li><a href="" class="menu">Home</a></li>
+                <li><a href="" class="menu">About</a></li>
+                <li><a href="" class="menu">Contact Us</a></li>
+                <li><a href="" class="menu">Login</a></li>
+            </ul> 
+        </nav>
+        <!-- banner Section  -->
+         <section class="container">
+            <div class="banner-top">
+                    <h1>Brand New <br>Group of Architects </h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="btn-primary">Explore More</button>
+                </div>
+            <div class="banner-bottom">
+                 <img src="images/banner.png" alt="">
+            </div>
+        </section>
+     </header>
+    <!-- Main Area  -->
+     <main class="container">
+        <!-- gallery section -->
+        <section class="gallery-container ">
+            <div class="gallery">
+                <img src="images/team1.png" alt="team-one">
+                <img src="images/team2.png" alt="team-two">
+                <img src="images/team3.png" alt="team-three">
+                <img src="images/team4.png" alt="team-four">
+            </div>
+            <div class="gallery-content">
+                <h3><span id="quick">Quick list</span><span id="of-our"> of Our </span><br><span id="feature"> Features </span></h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </section>
+     </main>
 </body>
 </html>
