--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Main Area  -->
      <main class="container">
         <!-- gallery section -->
-        <section class="gallery-container ">
+        <section class="gallery-container">
             <div class="gallery">
                 <img src="images/team1.png" alt="team-one">
                 <img src="images/team2.png" alt="team-two">
@@ -48,6 +48,67 @@
                 <button class="btn-primary">Explore More</button>
             </div>
         </section>
+        <!-- features Area -->
+         <section class="features">
+            <div class="feature-left">
+                <h2>Features you will love & enjoy</h2>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <div class="feature-card">
+                    <h4>Dexktop & Mobile Version</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Drag & Drop Builder</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Awesome Modern Design</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Super Easy to Edit</h4>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="feature-right">
+                <img src="images/architect.png" alt="">
+                <button class="btn-container">10 + Year <br>
+                    <span id="btn-exprience">
+                     Exprience
+                    </span>
+                </button>
+            </div>
+            
+        </section>
+        <!-- Facts Area -->
+         <section id="facts">
+            <div class="facts-top">
+                <h3>Some Facts</h3>
+                <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            </div>
+            <div class="facts-bottom">
+                <div class="cards">
+                    <img src="images/icons/customers.png" alt="">
+                    <h3>54</h3>
+                    <p>Awards Winnings</p>
+                </div>
+                <div class="cards">
+                    <img src="images/icons/email.png" alt="">
+                    <h3>1458</h3>
+                    <p>Project Finished</p>
+                </div>
+                <div class="cards">
+                    <img src="images/icons/projects.png" alt="">
+                    <h3>590</h3>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="cards">
+                    <img src="images/icons/ribon.png" alt="">
+                    <h3>22578</h3>
+                    <p>Email Send</p>
+                </div>
+            </div>
+         </section>
      </main>
 </body>
 </html>
